--- a/index.html
+++ b/index.html
@@ -3,52 +3,29 @@
 <head>
   <meta charset="UTF-8">
   <title>Privacy Policy — FluxBot</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <style>
-    body {
-      font-family: system-ui, sans-serif;
-      max-width: 700px;
-      margin: 4em auto;
-      padding: 0 1em;
-      line-height: 1.6;
-      color: #eee;
-      background: #0e0e0e;
-    }
-    h1 { color: #ff4c70; }
-    code { background: #1c1c1c; padding: 2px 4px; border-radius: 4px; }
-    a { color: #91d2ff; }
-  </style>
 </head>
 <body>
+  <h1>Privacy Policy</h1>
+  <p><strong>Last updated:</strong> August 3, 2025</p>
 
-<h1>Privacy Policy</h1>
-<p><strong>Last updated:</strong> August 3, 2025</p>
+  <p>This privacy policy applies to the FluxBot application created by @N9tta198cbd.</p>
 
-<p>This privacy policy applies to the FluxBot application developed by <code>@n9tta198cbd</code>.</p>
+  <h2>What We Collect</h2>
+  <ul>
+    <li>Your Pinterest user ID and username</li>
+    <li>Pins and boards selected for publishing</li>
+  </ul>
 
-<h2>1. What We Collect</h2>
-<ul>
-  <li>Your Pinterest user ID and profile name</li>
-  <liPins and boards you choose to create through FluxBot</li>
-</ul>
+  <h2>How We Use Your Data</h2>
+  <p>Data is only used to let you publish Pins through FluxBot. We do not share, sell, or store data externally.</p>
 
-<h2>2. How Your Data Is Used</h2>
-<p>We use this information solely to let you publish Pins on your own Pinterest account. We do not share, sell, or store any personal information on external servers.</p>
+  <h2>Storage</h2>
+  <p>Your access token is stored locally on the developer’s secure device. It is never uploaded anywhere.</p>
 
-<h2>3. Token Storage</h2>
-<p>Your access token is stored locally (on the developer's personal device) and is not transmitted to any third-party services.</p>
+  <h2>User Control</h2>
+  <p>To revoke access or delete all data, message us at <a href="https://t.me/N9tta198cbd">@N9tta198cbd</a>. Data will be erased within 48 hours.</p>
 
-<h2>4. Your Control</h2>
-<p>You may revoke access at any time by removing the app from your Pinterest account or contacting us via <a href="https://t.me/N9tta198cbd">@N9tta198cbd</a>. All associated tokens and temporary data will be deleted within 48 hours.</p>
-
-<h2>5. Cookies</h2>
-<p>This website does not use cookies or analytics.</p>
-
-<h2>6. Changes</h2>
-<p>Updates to this policy will be posted here with a new \"last updated\" date.</p>
-
-<h2>7. Contact</h2>
-<p>Telegram: <a href="https://t.me/N9tta198cbd">@N9tta198cbd</a></p>
-
+  <h2>Contact</h2>
+  <p><a href="https://t.me/N9tta198cbd">https://t.me/N9tta198cbd</a></p>
 </body>
 </html>
